# CPW

./: CMakeLists.txt  LICENSE  README.md
CPW/: TaskingTypeTraits.h  async.h  parallel_for.h  parallel_for.inl  schedule.h  schedule.inl
cmake/: CPW.cmake  FindTBB.cmake  gcc.cmake  icc.cmake  msvc.cmake
tests/: async.cpp  parallel_for.cpp  schedule.cpp
